# metacam_nav

./: .clang-format  .gitignore  README.md  cp_deb.sh  delete.sh  install.sh  metacam_network_setup.bash  nav_log.sh  pack_deb.sh  project.py  start_porxy.sh  versions.yaml
src/AGlobalPlanner/global_planner_/: CMakeLists.txt  package.xml
src/AGlobalPlanner/global_planner_/launch/: global_planner.launch
src/AGlobalPlanner/global_planner_/src/: global_planner.cpp
src/Gazebo/sentry_gazebo/: CMakeLists.txt  package.xml
src/Gazebo/sentry_gazebo/launch/: startup_robot copy.launch  startup_robot.launch  startup_robot_a.launch  startup_robot_map.launch  startup_robot_rm2024.launch  startup_robot_skyland.launch
src/Gazebo/sentry_gazebo/urdf/: car_drive.gazebo
src/Gazebo/sentry_gazebo/worlds/: RMUC2024.world  RMUC2024_a.world  black.world  block.world
src/Globalplanner/costmap_2d/: CMakeLists.txt
src/Globalplanner/costmap_2d/plugins/: obstacle_layer.cpp
src/Globalplanner/map_server/: CMakeLists.txt
src/Globalplanner/map_server/launch/: map_server.launch
src/Globalplanner/map_server/src/: main.cpp  map_saver.cpp
src/Globalplanner/nav_gplanner_start/: CMakeLists.txt  package.xml
src/Globalplanner/nav_gplanner_start/config/: system_gplanner.yaml
src/Globalplanner/nav_gplanner_start/launch/: global_planner.launch  system_gplanner.launch
src/Globalplanner/nav_start_global/: CMakeLists.txt
src/Globalplanner/nav_start_global/launch/: global_planner.launch
src/Globalplanner/pcl_to_laserscan/: CMakeLists.txt  nodelets.xml  package.xml
src/Globalplanner/pcl_to_laserscan/launch/: my_cloud_to_laser.launch  sample_node.launch  sample_nodelet.launch
src/Globalplanner/pcl_to_laserscan/src/: pointcloud_to_laserscan_node.cpp  pointcloud_to_laserscan_nodelet.cpp
src/Globalplanner/waypoint_control/: CMakeLists.txt
src/Globalplanner/waypoint_control/Parameter/: CMakeLists.txt
src/Globalplanner/waypoint_control/include/: transverse.h  waypoint_control.h
src/Globalplanner/waypoint_control/launch/: waypoint_control.launch
src/Globalplanner/waypoint_control/src/: extern.cpp  waypoint_control.cpp
src/Localplanner/local_planner/: CMakeLists.txt  package.xml
src/Localplanner/local_planner/config/: tita.yaml
src/Localplanner/local_planner/launch/: local_planner.launch  reconfigure.launch  system_lplanner.launch  system_rmuc.launch
src/Localplanner/local_planner/localPlanner/: CMakeLists.txt
src/Localplanner/local_planner/pathFollower/: CMakeLists.txt
src/Localplanner/local_planner/pcd/: admiralty_map.pcd  gswj.pcd  mtr_jinzhong.pcd  skyland.pcd
src/Localplanner/lplanner_reconfigure/: CMakeLists.txt  package.xml
src/Localplanner/lplanner_reconfigure/cfg/: lpdata.cfg
src/Localplanner/lplanner_reconfigure/launch/: lplanner_reconfigure.launch
src/Localplanner/lplanner_reconfigure/msg/: lplanner_control.msg
src/Localplanner/lplanner_reconfigure/src/: lpdata_config.cpp
src/Localplanner/map_to_odom/: CMakeLists.txt  package.xml
src/Localplanner/map_to_odom/include/: map_to_odom.h
src/Localplanner/map_to_odom/launch/: map_to_odom.launch
src/Localplanner/map_to_odom/src/: map_to_odom.cpp
src/Localplanner/pfollower_reconfigure/: CMakeLists.txt  package.xml
src/Localplanner/pfollower_reconfigure/cfg/: pfdata.cfg
src/Localplanner/pfollower_reconfigure/launch/: pfollower_reconfigure.launch
src/Localplanner/pfollower_reconfigure/msg/: pfollower_control.msg
src/Localplanner/pfollower_reconfigure/src/: pfdata_config.cpp
src/Localplanner/vehicle_simulator/: CMakeLists.txt
src/Localplanner/vehicle_simulator/launch/: key_control.launch  key_test.launch
src/Localplanner/vehicle_simulator/src/: car_control.cpp  (+2 more)
src/TopService/debug_node/: CMakeLists.txt
src/Top_service/odom_tf/: CMakeLists.txt
src/Top_service/websockets/: CMakeLists.txt  package.xml
src/lio_interface/: CMakeLists.txt
src/lio_interface/launch/: lio_interface.launch
src/lio_interface/src/: cloud_interface.cpp  odom_interface.cpp
src/msg_process/: CMakeLists.txt  package.xml
src/msg_process/msg/: receive_data.msg  send_data.msg
src/nav_ctrl/: CMakeLists.txt  package.xml
src/nav_ctrl/launch/: nav_ctrl.launch
src/nav_ctrl/src/: nav_ctrl.cpp
src/nav_real_start/: CMakeLists.txt  package.xml
src/nav_real_start/launch/: nav_real_start.launch  nav_real_start_gs.launch  tf_real.launch
src/nav_real_start/src/: start_control.cpp
src/nav_serial_ctrl/: CMakeLists.txt  package.xml
src/nav_serial_ctrl/src/: nav_serial_ctrl.cpp
src/nav_service/: CMakeLists.txt  package.xml
src/nav_service/Parameter/: CMakeLists.txt
src/nav_service/config/: param.yaml  prior_path.txt  prior_path.yaml
src/nav_service/include/: types.h
src/nav_service/launch/: nav_service.launch
src/nav_service/src/: nav_service.cpp
src/navlog_control/: CMakeLists.txt  package.xml
src/navlog_control/config/: config.yaml
src/navlog_control/launch/: navlog_control.launch
src/navlog_control/log_files/: navlog.txt
src/navlog_control/module/: CMakeLists.txt
src/navlog_control/src/: nav_logging.cpp  navlog_control.cpp  spd_logging.cpp
src/relocalization/: CMakeLists.txt  package.xml
src/relocalization/3d_bbs_lib/: CMakeLists.txt  README.md
src/relocalization/cmake/: Findgpu_bbs3d.cmake
src/relocalization/config/: challenging.yaml  easy.yaml  test.yaml  test_bday.yaml  xbotpark.yaml
src/relocalization/include/: relocalization.h
src/relocalization/launch/: publish_pcd.launch  relocalization.launch
src/relocalization/param/: icp_params.yaml
src/relocalization/pcd/: rmuc_relocate.pcd
src/relocalization/scripts/: pcd_to_bag.py
src/relocalization/src/: relocalization.cpp
src/rosbag_control/: CMakeLists.txt  package.xml
src/rosbag_control/config/: config.yaml
src/start_pathPlan_real/: CMakeLists.txt  package.xml
src/start_pathPlan_real/launch/: pathPlan_real.launch  start_control.launch  tf_real.launch
src/start_pathPlan_real/src/: main.cpp  start_control.cpp
src/unitree_legged_sdk/: CMakeLists.txt  README.md
src/unitree_legged_sdk/unitree_nav/: unitree_nav.cpp
(+411 files in other folders)
