<?xml version="1.0"?>
<package format="2">
    <name>start_pathPlan_real</name>
    <version>0.0.0</version>
    <description>The start_pathPlan_real package</description>
    <maintainer email="ldq@todo.todo">ldq</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>msg_process</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>pcl_ros</build_export_depend>
    <build_export_depend>pcl_conversions</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <export>
    </export>
</package>