<package>
  <name>local_planner</name>
  <version>0.0.1</version>
  <description>Local Planner</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>msg_process</build_depend>
  <build_depend>lplanner_reconfigure</build_depend>
  <build_depend>pfollower_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>lplanner_reconfigure</run_depend>
  <run_depend>pfollower_reconfigure</run_depend>
</package>
